WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Corporate_Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Parent_Account_ID__c</fullName>
    <formula>Account__r.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Parent Account ID</label>
    <type>Text</type>
</CustomField>