WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Processed Date</label>
    <type>Date</type>
</CustomField>