WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID__c</fullName>
    <formula>Account__r.Parent.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account ID</label>
    <type>Text</type>
</CustomField>