WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Processed_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date_Year__c</fullName>
    <formula>Text( YEAR( Last_Processed_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processed Date Year</label>
    <type>Text</type>
</CustomField>