WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Record_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Source_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Record Source ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>