WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Summary_ID__c.field-meta.xml
<CustomField>
    <fullName>Summary_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Summary ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>