WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Total_Amount_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Transferred__c</fullName>
    <label>Total Amount Transferred</label>
    <summarizedField>Transaction_Summary_Detail__c.Amount_Transferred__c</summarizedField>
    <summaryForeignKey>Transaction_Summary_Detail__c.Transaction_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>