WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Total_Carrier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Carrier_Revenue__c</fullName>
    <inlineHelpText>This field contains a summary of the carrier revenue of the related transaction summary detail records.</inlineHelpText>
    <label>Total Carrier Revenue</label>
    <summarizedField>Transaction_Summary_Detail__c.Carrier_Revenue__c</summarizedField>
    <summaryForeignKey>Transaction_Summary_Detail__c.Transaction_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>