WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Total_Revenue_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_2__c</fullName>
    <description>Used 2 to mirror the API Name from EFS org</description>
    <label>Total Revenue</label>
    <summarizedField>Transaction_Summary_Detail__c.Revenue__c</summarizedField>
    <summaryForeignKey>Transaction_Summary_Detail__c.Transaction_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>