WexGit/Wex_DX/force-app/main/default/objects/Transaction_Summary__c/fields/Total_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Total_Transaction__c</fullName>
    <label>Total Transaction</label>
    <summarizedField>Transaction_Summary_Detail__c.Transaction__c</summarizedField>
    <summaryForeignKey>Transaction_Summary_Detail__c.Transaction_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>